--- a/ASI.Basecode.WebApp/Views/Home/ViewBook.cshtml
+++ b/ASI.Basecode.WebApp/Views/Home/ViewBook.cshtml
@@ -132,62 +132,36 @@
                         </div>
 
 
-               <div>
-                  <div >
-                        <h2 class="author-other-books"> CAMILLE'S OTHER WORKS SECTION</h2>
-                  </div>
-                  
-                    <hr />
-                    <div class="book-wrapper">
-                        <script>
-                            for (let i = 0; i < 5; i++) {
-                                document.write(`
-                                                                                            <div class="book-contents">
-                                                                                                <div class="book-image-preview">
-                                                                                                <img class="book-image" src="/img/book-preview.png" alt="Book Preview" />
-                                                                                                </div>
-                                                                                                <div class="book-info-card" id="per-book-info">
-                                                                                                    <h5 class="book-title book-text">The Dress And The Girl</h5>
-                                                                                                    <p class="authors-name book-text">by Camille Andros • 2019</p>
-                                                                                                    <p class="book-description book-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras fermentum posuere tortor, sit amet tempor enim elementum placerat. Quisque ornare tempus aliquet.</p>
-                                                                                                    <div class="book-rating">
-                                                                                                        <i class="fas fa-star star-rating"></i>
-                                                                                                        <i class="fas fa-star star-rating"></i>
-                                                                                                        <i class="fas fa-star star-rating"></i>
-                                                                                                        <i class="far fa-star-half star-rating"></i>
-                                                                                                        <i class="far fa-star star-rating"></i>
-                                                                                                        <p class="book-rating-value">128 avg rating</p>
-                                                                                                    </div>
-                                                                                                    <p class="book-reviews">420 reviews</p>
-                                                                                                </div>
-                                                                                            </div>
-                                                                                        `);
-                            }
-                        </script>
-                        <button id="viewMoreButton" class="btn btn-primary">View More Books</button>
-                    </div>
-               </div>
-                
 
-                        <h1 class="test">AUTHOR'S OTHER WORKS</h1>
 
-                        @if (Model.RelatedBooks != null && Model.RelatedBooks.Any())
-                        {
-                            <div class="related-books-container">
-                                @foreach (var relatedBook in Model.RelatedBooks)
-                                {
-                                    <div class="related-book">
-                                        <img src="@Url.Content(relatedBook.Image)" alt="@relatedBook.Name"
-                                            class="related-book-image" />
-                                        <p class="related-book-title">@relatedBook.Name</p>
-                                    </div>
-                                }
-                            </div>
-                        }
-                        else
-                        {
-                            <p>No other works by this author found.</p>
-                        }5
+
+                        <h2 class="section-title">
+                            @foreach (var authorName in Model.Book.AuthorNames)
+                            {
+                                @authorName.ToUpperInvariant()
+                            }'S OTHER WORKS
+                        </h2>
+                        <hr />
+
+                      @if (Model.RelatedBooks != null && Model.RelatedBooks.Any())
+{
+    <div class="book-container">
+        @foreach (var relatedBook in Model.RelatedBooks.Take(4)) 
+        {
+            <div class="book">
+                <img src="@Url.Content(relatedBook.Image)" alt="@relatedBook.Name" class="book-images" />
+                <p class="book-title">@relatedBook.Name</p>
+            </div>
+        }
+      
+    </div>
+                            <div class="see-more-container">   <button id="seeMoreButton" class="see-more-button">See More</button></div>
+}
+else
+{
+    <p>No other works by this author found.</p>
+}
+
 
                         <div class="book-rating-container">
                             <div class="book-rating-wrapper">
@@ -245,54 +219,31 @@
                         </div>
 
 
-            <h2 >SUGGESTED FOR YOU SECTION</h2>
-            <hr/>
-            <div class="book-wrapper">
-                <script>
-                    for (let i = 0; i < 5; i++) {
-                        document.write(`
-                                                                                    <div class="book-contents">
-                                                                                        <div class="book-image-preview">
-                                                                                        <img class="book-image" src="/img/book-preview.png" alt="Book Preview" />
-                                                                                        </div>
-                                                                                        <div class="book-info-card" id="per-book-info">
-                                                                                            <h5 class="book-title book-text">The Dress And The Girl</h5>
-                                                                                            <p class="authors-name book-text">by Camille Andros • 2019</p>
-                                                                                            <p class="book-description book-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras fermentum posuere tortor, sit amet tempor enim elementum placerat. Quisque ornare tempus aliquet.</p>
-                                                                                            <div class="book-rating">
-                                                                                                <i class="fas fa-star star-rating"></i>
-                                                                                                <i class="fas fa-star star-rating"></i>
-                                                                                                <i class="fas fa-star star-rating"></i>
-                                                                                                <i class="far fa-star-half star-rating"></i>
-                                                                                                <i class="far fa-star star-rating"></i>
-                                                                                                <p class="book-rating-value">128 avg rating</p>
-                                                                                            </div>
-                                                                                            <p class="book-reviews">420 reviews</p>
-                                                                                        </div>
-                                                                                    </div>
-                                                                                `);
-                    }
-                </script>
-                <button id="viewMoreButton" class="btn btn-primary">View More Books</button>
-            </div>
+                        <h2 class="section-title">SUGGESTED FOR YOU SECTION</h2>
+                        <hr />
 
-                        @if (Model.AllBooks != null && Model.AllBooks.Any())
-                        {
-                            <div class="suggested-books-container">
-                                @foreach (var book in Model.AllBooks)
-                                {
-                                    <div class="suggested-book">
-                                        <img src="@Url.Content(book.Image)" alt="@book.Name" class="suggested-book-image" />
-                                        <p class="suggested-book-title">@book.Name</p>
-                                        <!-- Add more details as needed -->
-                                    </div>
-                                }
-                            </div>
-                        }
-                        else
-                        {
-                            <p>No books available for suggestions.</p>
-                        }
+                       @if (Model.AllBooks != null && Model.AllBooks.Any())
+{
+    <div class="book-container">
+        @foreach (var book in Model.AllBooks.Take(4)) 
+        {
+            <div class="book">
+                <img src="@Url.Content(book.Image)" alt="@book.Name" class="book-images" />
+                <p class="book-title">@book.Name</p>
+                
+            </div>
+        }
+                              
+    </div>
+
+                            <div class="see-more-container">   <button id="seeMoreButton" class="see-more-button">See More</button></div>
+}
+else
+{
+    <p>No books available for suggestions.</p>
+}
+
+
                     </div>
 
                 </div>
