--- a/ASI.Basecode.WebApp/Views/Home/List.cshtml
+++ b/ASI.Basecode.WebApp/Views/Home/List.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ASI.Basecode.Data.Models.Book>
+﻿@model IEnumerable<DataModels.Book>
 
 @{
     ViewData["Title"] = "List";
@@ -16,11 +16,11 @@
                 @Html.DisplayNameFor(model => model.Id)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Title)
+                @Html.DisplayNameFor(model => model.Name)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Author)
-            </th>
+            @*<th>
+                @Html.DisplayFor(modelItem => string.Join(", ", item.AuthorNames))
+            </th>*@
             <th></th>
         </tr>
     </thead>
@@ -31,11 +31,11 @@
                 @Html.DisplayFor(modelItem => item.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Title)
+                 @Html.DisplayFor(modelItem => item.Name)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Author)
-            </td>
+       @*     <td>
+                    @Html.DisplayFor(modelItem => string.Join(", ", item.AuthorNames))
+            </td>*@
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
                 @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
