--- a/ASI.Basecode.WebApp/Views/_ViewImports.cshtml
+++ b/ASI.Basecode.WebApp/Views/_ViewImports.cshtml
@@ -1,5 +1,8 @@
 ﻿@using ASI.Basecode.WebApp
-@using ASI.Basecode.WebApp.Models
+@using ASI.Basecode.Data
+@using ASI.Basecode.Services.ServiceModels
+@using Models = ASI.Basecode.WebApp.Models;
+@using DataModels = Data.Models;
 @using Microsoft.AspNetCore.Http;
 @inject IHttpContextAccessor HttpContextAccessor
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
