--- a/ASI.Basecode.WebApp/Views/Shared/_Header.cshtml
+++ b/ASI.Basecode.WebApp/Views/Shared/_Header.cshtml
@@ -2,34 +2,33 @@
 @inject IHttpContextAccessor HttpContextAccessor
 <header class="@((ViewBag.LoginView == true) ? "hide-navbar" : "")">
     <div class="logosec hover-pointer">
-        <img src="~/img/logo2.png"
+        <img src="~/img/asi-logo-invert.svg"
              style="width: 185px;" alt="logo"
              onclick="window.location.href = '@Url.Action("Index", "Home")';">
     </div>
-    <form class="d-flex" role="search">
-        <input class="form-control me-2 search-input" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success search-button" type="submit">Search</button>
-    </form>
     <div class="logosec">
         @HttpContextAccessor.HttpContext.Session.GetString("UserName")
-        <div class="mr-20 hover-pointer" style="position: relative">
-            <div class="dp">
-                <img src="~/img/profile-logo.png"
-                     class="dpicn hover-pointer"
-                     alt="dp">
-            </div>
-            <div class="dropdown">
-                <ul>
-                    <li>
-                        <i class="fa-solid fa-gear"></i>
-                        <a href="#">Settings</a>
-                    </li>
-                    <li>
-                        <i class="fa-solid fa-right-from-bracket"></i>
-                        <a asp-action="SignOutUser" asp-controller="Account">Logout</a>
-                    </li>
-                </ul>
-            </div>
+
+        <partial name="_LoginPartial" />
+        @*<div class="mr-20 hover-pointer" style="position: relative">
+        <div class="dp">
+        <img src="~/img/profile-logo.png"
+        class="dpicn hover-pointer"
+        alt="dp">
         </div>
+        <div class="dropdown">
+
+        <ul>
+        <li>
+        <i class="fa-solid fa-gear"></i>
+        <a href="#">Settings</a>
+        </li>
+        <li>
+        <i class="fa-solid fa-right-from-bracket"></i>
+        <a asp-action="SignOutUser" asp-controller="Account">Logout</a>
+        </li>
+        </ul>
+        </div>
+        </div>*@
     </div>
 </header>
