--- a/ASI.Basecode.WebApp/Views/Account/Register.cshtml
+++ b/ASI.Basecode.WebApp/Views/Account/Register.cshtml
@@ -16,7 +16,7 @@
                     <div class="card-body p-md-5 mx-md-4">
 
                         <div class="text-center" style="padding-bottom: 39px">
-                            <h3 style="color: #B64110; line-height: 48px; font-size: 32px;">Create a Scooby Account</h3>
+                            <h3 style="color: #B64110; line-height: 48px; font-size: 32px;">Create a Skooby Account</h3>
                         </div>
 
                         <form method="post" action="/Account/Register" style=" margin-left: 20px; margin-right: 20px;">
@@ -28,9 +28,10 @@
                                 <span asp-validation-for="UserId" class="text-danger"></span>
                             </div>
                             <div class="form-outline mb-4">
-                                <label class="form-label" for="email">Email</label>
+@*                                 <label class="form-label" for="email">Email</label> *@
                                 <input type="text" id="email" class="form-control"
-                                       asp-for="Email" placeholder="Enter email" />
+                                       asp-for="Email" placeholder="Enter email" 
+                                       style="background-color: #E7E7E7; border-radius: 10px; " />
                                 <span asp-validation-for="Email" class="text-danger"></span>
                             </div>
                             <div class="form-outline mb-4">
