--- a/ASI.Basecode.WebApp/Views/Account/Register.cshtml
+++ b/ASI.Basecode.WebApp/Views/Account/Register.cshtml
@@ -23,7 +23,7 @@
                             <div class="form-outline mb-4">
                                <!-- <label class="form-label" for="userId">UserId</label> -->
                                 <input type="text" id="userId" class="form-control"
-                                       asp-for="UserId" placeholder="Enter userid" 
+                                       asp-for="UserId" placeholder="Enter username" 
                                        style="background-color: #E7E7E7; border-radius: 10px; " />
                                 <span asp-validation-for="UserId" class="text-danger"></span>
                             </div>
