--- a/ASI.Basecode.WebApp/Views/Shared/_Layout.cshtml
+++ b/ASI.Basecode.WebApp/Views/Shared/_Layout.cshtml
@@ -19,17 +19,17 @@
     <div class="container">  
         <main role="main"> 
              <div class="sidenav">
-                <div class="masterlist masterlist-users">
-                    <div class="catergory-title">
-                        <h5>
-                            test
-                        </h5>
-                    </div> 
-                    <a href="#about">About</a>
+                <div class="masterlist-padding masterlist-users">
+                    <div class="masterlist">
+                        <div class="masterlist-title">
+                            <h5>User List</h5>
+                        </div>
+                        <a  href="#about">Users</a>
+                    </div>
                 </div>
-                <a href="#services">Services</a>
+                @* <a class="masterlist masterlist-padding" href="#services">Services</a>
                 <a href="#clients">Clients</a>
-                <a href="#contact">Contact</a>
+                <a href="#contact">Contact</a> *@
             </div>  
             <div class="content-container">
                 @RenderBody()
