--- a/ASI.Basecode.WebApp/wwwroot/css/sidebar.css
+++ b/ASI.Basecode.WebApp/wwwroot/css/sidebar.css
@@ -2,12 +2,17 @@
     font-family: "Lato", sans-serif;
 }
 
+:root {
+    --primary-color: #FF7519;
+    --secondary-color: #B64110;
+    --dark-p-color: #331204;
+    --star-color: #FFA928;
+}
+
 .sidenav {
     height: 100%;
     width: 160px;
-    position: absolute;
-    /*z-index: 1;*/
-    /*top: 0;*/
+    position: absolute; 
     left: 0;
     background-color: #fff;
     overflow-x: hidden;
@@ -17,16 +22,19 @@
     -moz-box-shadow: -1px 2px 5px 0px rgba(0,0,0,0.56);
 }
 
-.catergory-title{
-    background-color:red;
+.masterlist-title {
+    background-color: var(--primary-color);
+    color:#fff;
+    padding: 5px 8px 5px 16px;
 }
+ 
 
-.masterlist {
-    padding: 6px 8px 6px 16px;
+.masterlist-padding {
+    padding: 6px 0px 6px 0px;
 }
 
 .sidenav a {
-    padding: 6px 8px 6px 16px;
+    padding: 6px 8px 6px 32px;
     text-decoration: none;
     font-size: 18px;
     color: #818181;
@@ -34,7 +42,7 @@
 }
 
         .sidenav a:hover {
-            color: #f1f1f1;
+            color: var(--dark-p-color);
         }
 
 
