--- a/ASI.Basecode.WebApp/Views/Account/Login.cshtml
+++ b/ASI.Basecode.WebApp/Views/Account/Login.cshtml
@@ -8,89 +8,50 @@
     ViewData["Title"] = "Login Page";
 } 
 
-<section class="hero-section">
-    <h1 id="hero-section-title">A Reader's Bestfriend.</h1>
-    <img class="hero-section-img" id="hero-section-img-login" src="/img/hero-image.png" />
-</section>
+ 
 
-<section>
+<div>
     <div>
-        <div>
-            @Html.AntiForgeryToken()
-        </div> 
-        <div class="modal-container modal-login-position">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-body">
-                        <h1 class="modal-title modal-title-auth fs-5" id="exampleModalLabel">Sign In</h1>
-                        <form method="post" action="/Account/Login" asp-antiforgery="true">
-                            <div class="mb-3">
-                                <label for="Email" class="form-label">Username</label>
-                                <input type="text" id="UserId" class="form-control" asp-for="Email"
-                                       placeholder="Enter username">
-                                <span asp-validation-for="Email" class="text-danger"></span>
-                            </div>
-                            <div class="mb-3">
-                                <label for="Password" class="form-label">Password</label>
-                                <input type="password" id="Password" class="form-control" asp-for="Password"
-                                       placeholder="Enter password">
-                                <span asp-validation-for="Password" class="text-danger"></span>
-                            </div>
-                            <div class="mb-3 form-link">
-                                <a class="redirect-forgot-password text-link" style="color:dimgray;"
-                                   asp-controller="Account" asp-action="ForgotPass">Forgot your password?</a>
-                            </div>
-                            <div class="mb-3 form-link">
-                                <span style="color:dimgray;">
-                                    No account?
-                                    <a class="redirect-sign-up text-link" asp-controller="Account"
-                                       asp-action="Register">Sign up</a>
-                                </span>
-                            </div>
-                            <button type="submit" class="btn btn-primary login-btn">Sign In</button>
-                          
-                        </form>
-                    </div>
+        @Html.AntiForgeryToken()
+    </div>
+    <div class="modal-container  ">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <h1 class="modal-title modal-title-auth fs-5" id="exampleModalLabel">Sign In</h1>
+                    <form method="post" action="/Account/Login" asp-antiforgery="true">
+                        <div class="mb-3">
+                            <label for="Email" class="form-label">Username</label>
+                            <input type="text" id="UserId" class="form-control" asp-for="Email"
+                                   placeholder="Enter username">
+                            <span asp-validation-for="Email" class="text-danger"></span>
+                        </div>
+                        <div class="mb-3">
+                            <label for="Password" class="form-label">Password</label>
+                            <input type="password" id="Password" class="form-control" asp-for="Password"
+                                   placeholder="Enter password">
+                            <span asp-validation-for="Password" class="text-danger"></span>
+                        </div>
+                        <div class="mb-3 form-link">
+                            <a class="redirect-forgot-password text-link" style="color:dimgray;"
+                               asp-controller="Account" asp-action="ForgotPass">Forgot your password?</a>
+                        </div>
+                        <div class="mb-3 form-link">
+                            <span style="color:dimgray;">
+                                No account?
+                                <a class="redirect-sign-up text-link" asp-controller="Account"
+                                   asp-action="Register">Sign up</a>
+                            </span>
+                        </div>
+                        <button type="submit" class="btn btn-primary login-btn">Sign In</button>
+
+                    </form>
                 </div>
             </div>
         </div>
-    </div> 
-</section>
-
-<section class="about-us-section">
-    <div class="container text-center about-us-content">
-        <div class="row">
-            <div class="col-6 about-col-left align-self-start">
-                <h1 class="about-title">
-                    Over 100,000 copies!
-                </h1>
-                <p class="about-description">
-                    Say goodbye to generic book recommendations! Skooby employs
-                    advanced algorithms to understand your reading preferences.
-                    By analyzing your past reads and ratings, the app suggests books
-                    tailored to your taste, ensuring you never run out of captivating reads.
-                </p>
-
-                <p class="about-description">
-                    Unlock a world of literary adventures today! Join Skooby, the ultimate
-                    book review app that keeps readers like you coming back for more.
-                    Dive into curated reviews, connect with a vibrant book-loving
-                    community, and discover your next favorite book. Don't miss out on
-                    the magic of Skooby – your literary journey begins here.
-                    Click 'Sign Up' now and start your reading adventure!
-                </p>
-                <button type="submit" class="redirect-sign-up btn btn-primary login-btn about-btn"  asp-controller="Account"
-                        asp-action="Register">
-                    Sign In
-                </button> 
-
-            </div>
-            <div class="col-6 about-col-right align-self-end">
-                <img src="/img/about-us.png" />
-            </div>
-        </div>
     </div>
-</section>
+</div>
+
 
 @section scripts {
     <script>
