--- a/ASI.Basecode.WebApp/Views/Shared/_Layout.cshtml
+++ b/ASI.Basecode.WebApp/Views/Shared/_Layout.cshtml
@@ -31,10 +31,9 @@
                 <a href="#clients">Clients</a>
                 <a href="#contact">Contact</a> *@
             </div>  
-            @RenderBody()
-            @* <div class="content-container">
+            <div class="content-container">
                 @RenderBody()
-            </div> *@
+            </div>
         </main>
     </div> 
  
