remove alliance header

--- a/ASI.Basecode.WebApp/Views/Shared/_Layout.cshtml
+++ b/ASI.Basecode.WebApp/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     @RenderSection("Styles", required: false)
 </head>
 <body>
-    @Html.Partial("_Header")  
+    @* @Html.Partial("_Header")   *@
     <div class="container">  
         <main role="main"> 
              <div class="sidenav">
