--- a/ASI.Basecode.WebApp/wwwroot/css/login.css
+++ b/ASI.Basecode.WebApp/wwwroot/css/login.css
@@ -36,9 +36,9 @@
     --dark-p-color: #331204;
 }
 
-.hide-navbar{
+/*.hide-navbar{
     display:flex;
-}
+}*/
 /*
 #hero-section-img-login {
         margin: 0px -50%;
