added superadmin user list conditional

--- a/ASI.Basecode.WebApp/Views/Admin/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Admin/Index.cshtml
@@ -1,5 +1,11 @@
 ﻿@model IEnumerable<Microsoft.AspNetCore.Identity.IdentityUser>
 
+@{
+    ViewBag.ShowSideBar = true;
+    ViewBag.ShowUserList = true;
+    ViewData["Title"] = "Login Page";
+}
+
 <table>
     <thead>
         <tr>
