--- a/ASI.Basecode.WebApp/Views/Book/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Book/Index.cshtml
@@ -5,50 +5,90 @@ integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2
 
 @{
     ViewBag.ShowSideBar = true;
-    ViewData["Title"] = "Login Page";
+    ViewBag.ShowBookList = false;
+    ViewData["Title"] = "Book Masterlist";
+}
+
+@section styles { 
+    <link rel="stylesheet" href="~/css/style.css" />
 }
 
 
-<h1>Books</h1>
+<style>
+    .table tbody tr:nth-child(odd) {
+        background-color: #f3f3f3;  
+    }
+ 
+    .table tbody tr:nth-child(even) {
+        background-color: #fff;  
+    }
+</style>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Title</th>
-            <th>Author</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var book in Model)
-        {
-            <tr>
-                <td>
-                    @book.Id
-                </td>
-                <td>
-                    @book.Name
-                </td>
-                <td>
-                    @string.Join(", ", book.AuthorNames)
-                </td>
-                <td>
-                    @string.Join(", ", book.GenreNames)
-                </td>
-                <td>
-                    <a href="@Url.Action("Details", "Book", new { id = book.Id })" class="btn btn-primary">Details</a>
-                    <a href="@Url.Action("Edit", "Book", new { id = book.Id })" class="btn btn-primary">Edit</a>
-                    <button data-url="@Url.Action("Delete", "Book", new { id = book.Id })" type="button"
-                        class="btn btn-danger">Delete</button>
-                </td>
-            </tr>
-        }
+<div class="table-container">
 
-    </tbody>
-</table>
 
-<a href="@Url.Action("Create", "Book")" class="btn btn-primary">Add New Book</a>
+    <div class="container table-tools">
+        <h1 class="table-title">Book Masterlist</h1>
+        <div class="row">
+
+            <div class="col col-left">
+                <div class="search-container">
+                    <form class="search-container d-flex" role="search">
+                        <input class="form-control me-2 search-input" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success search-button" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+            <div class="col col-right">
+                <a href="@Url.Action("Create", "Book")" class="btn btn-primary">Add New Book</a>
+            </div>
+        </div>
+    </div>
+
+     
+
+
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Title</th>
+                    <th>Author</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var book in Model)
+                {
+                    <tr>
+                        <td>
+                            @book.Id
+                        </td>
+                        <td>
+                            @book.Name
+                        </td>
+                        <td>
+                            @string.Join(", ", book.AuthorNames)
+                        </td>
+                        <td>
+                            @string.Join(", ", book.GenreNames)
+                        </td>
+                        <td>
+                            <a href="@Url.Action("Details", "Book", new { id = book.Id })" class="btn btn-primary">Details</a>
+                            <a href="@Url.Action("Edit", "Book", new { id = book.Id })" class="btn btn-primary">Edit</a>
+                            <button data-url="@Url.Action("Delete", "Book", new { id = book.Id })" type="button"
+                                    class="btn btn-danger">
+                                Delete
+                            </button>
+                        </td>
+                    </tr>
+                }
+
+            </tbody>
+        </table> 
+
+</div>
+
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
