--- a/ASI.Basecode.WebApp/Views/Shared/_Header.cshtml
+++ b/ASI.Basecode.WebApp/Views/Shared/_Header.cshtml
@@ -7,7 +7,7 @@
 @inject UserManager<IdentityUser> UserManager
 <header class="@((ViewBag.LoginView == true) ? "hide-navbar" : "")">
     <div class="logosec hover-pointer">
-        <img src="~/img/asi-logo-invert.svg"
+        <img src="~/img/logo2-1.png"
              style="width: 185px;" alt="logo"
              onclick="window.location.href = '@Url.Action("Index", "Home")';">
     </div>
@@ -24,11 +24,7 @@
                          class="dpicn hover-pointer"
                          alt="dp">
                 </div>
-                <div class="dropdown">
-
-
-
-
+                <div class="dropdown"> 
                     @*@HttpContextAccessor.HttpContext.Session.GetString("UserName")*@
                     <ul class="navbar-nav">
                         <li class="nav-item">
