--- a/ASI.Basecode.WebApp/Views/Shared/_Layout.cshtml
+++ b/ASI.Basecode.WebApp/Views/Shared/_Layout.cshtml
@@ -22,6 +22,13 @@
             {
                 <div class="sidenav">
                     <div class="masterlist-padding masterlist-users">
+                        <div class="masterlist">
+                            <div class="masterlist-title">
+                                <h5>Home</h5>
+                            </div>
+                            <a asp-controller="Home" asp-action="Index">Dashboard</a>
+                        </div>
+                        
                         @if (ViewBag.ShowUserList == true)
                         {
                             <div class="masterlist">
@@ -30,17 +37,28 @@
                                 </div>
                                 <a href="#about">Users</a>
                             </div>
-                        }
+
+                        } 
+                            <div class="masterlist">
+                                <div class="masterlist-title">
+                                    <h5>Book List</h5>
+                                </div>
+                            <a asp-controller="Book" asp-action="Index">Genres</a>
+                            <a asp-controller="Book" asp-action="Index">Books</a>
+                            <a asp-controller="Book" asp-action="Index">Authors</a>
+                            <a asp-controller="Book" asp-action="Index">Reviews</a>
+                            </div>
+                         
                     </div>
                     @* <a class="masterlist masterlist-padding" href="#services">Services</a>
                 <a href="#clients">Clients</a>
                 <a href="#contact">Contact</a> *@
                 </div>
             }
-            @RenderBody()
-            @* <div class="content-container">
+            @* @RenderBody() *@
+            <div class="content-container">
                 @RenderBody()
-            </div> *@
+            </div>
         </main>
     </div> 
  
