--- a/ASI.Basecode.WebApp/wwwroot/css/style.css
+++ b/ASI.Basecode.WebApp/wwwroot/css/style.css
@@ -43,6 +43,17 @@ header {
     align-items: center;
 }
 
+.table-container {
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 4px 16px rgba(0, 0, 0, 0.25);
+}
+
+.table{
+    border: 1px solid #f3f3f3;
+}
+
 .logo {
     font-size: 27px;
     font-weight: 600;
@@ -51,6 +62,23 @@ header {
 
 .menuicn {
     cursor: pointer;
+}
+
+.table-title{
+    padding-bottom:20px;
+}
+
+
+.table-tools {
+    padding: 20px 0px;
+}
+
+.col-left {
+    text-align: start;
+}
+
+.col-right {
+    text-align: end;
 }
 
 .searchbar,
